--- a/output/archives.html
+++ b/output/archives.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <link rel="shortcut icon" href="/favicon.ico" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
+        <link href="/feeds/all.atom.xlm" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
         <link href="/feeds/all.rss.xlm" type="application/rss+xml" rel="alternate" title="Unlock data power RSS Feed" />
   </head>
 
@@ -55,7 +55,7 @@
               <a href="/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
-            <li><a href="/feeds/all.atom.xml" 
+            <li><a href="/feeds/all.atom.xlm" 
                    type="application/atom+xml" rel="alternate">
                 <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
@@ -82,6 +82,11 @@
   <dl>
 	<dt>Sun 04 March 2018</dt>
 	<dd><a href='/my-first-post.html'>My First Post</a></dd>
+  </dl>
+  <h2>2016</h2>
+  <dl>
+	<dt>Wed 08 June 2016</dt>
+	<dd><a href='/first-notebook.html'>First Jupyter Notebook</a></dd>
   </dl>
 </div> <!-- /#archives-body -->
         </div><!-- /content -->
