--- a/output/authors.html
+++ b/output/authors.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <link rel="shortcut icon" href="/favicon.ico" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
+        <link href="/feeds/all.atom.xlm" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
         <link href="/feeds/all.rss.xlm" type="application/rss+xml" rel="alternate" title="Unlock data power RSS Feed" />
   </head>
 
@@ -55,7 +55,7 @@
               <a href="/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
-            <li><a href="/feeds/all.atom.xml" 
+            <li><a href="/feeds/all.atom.xlm" 
                    type="application/atom+xml" rel="alternate">
                 <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
@@ -76,7 +76,7 @@
 <li>
   <a href="/author/trung-vo.html">
 	<i class="fa fa-user fa-fw fa-lg"></i>Trung Vo 
-  </a> (1)
+  </a> (2)
 </li>
 </ul>
         </div><!-- /content -->
