--- a/output/categories.html
+++ b/output/categories.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <link rel="shortcut icon" href="/favicon.ico" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
+        <link href="/feeds/all.atom.xlm" type="application/atom+xml" rel="alternate" title="Unlock data power Atom Feed" />
         <link href="/feeds/all.rss.xlm" type="application/rss+xml" rel="alternate" title="Unlock data power RSS Feed" />
   </head>
 
@@ -55,7 +55,7 @@
               <a href="/archives.html">Archives</a>
             </li>
           <li class="divider"></li>
-            <li><a href="/feeds/all.atom.xml" 
+            <li><a href="/feeds/all.atom.xlm" 
                    type="application/atom+xml" rel="alternate">
                 <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
         </ul> <!-- /nav -->
@@ -74,6 +74,7 @@
 <h1 class="direct-heading"><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h1>
 <ul class="direct-list">
 	<li><a href="/category/misc.html">Misc</a></li>
+	<li><a href="/category/posts.html">posts</a></li>
 </ul>
         </div><!-- /content -->
 
