Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -74,6 +74,7 @@
 <h1 class="direct-heading"><i class="fa fa-folder fa-fw fa-lg"></i> Categories</h1>
 <ul class="direct-list">
 	<li><a href="/category/misc.html">Misc</a></li>
+	<li><a href="/category/posts.html">posts</a></li>
 </ul>
         </div><!-- /content -->
 
