--- a/index.html
+++ b/index.html
@@ -96,6 +96,42 @@
       </div>    </article>
 
     <hr />
+    <article>
+<abbr class="article-header-date">
+  Wed 08 June 2016
+</abbr> <h1>
+  <a href="/first-notebook.html" rel="bookmark"
+     title="Permalink to First Jupyter Notebook">
+    First Jupyter Notebook
+  </a>
+</h1><div class="article-header-info">
+  <p>
+      Posted by <a href="/author/trung-vo.html">Trung Vo</a>
+    in 
+    <a href="/category/posts.html">
+      posts</a>
+    &nbsp;&nbsp;
+  </p>
+</div> <!-- /.article-header-info -->  
+      <div class="summary">
+		
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="First-post!">First post!<a class="anchor-link" href="#First-post!">¶</a></h1><p>This will be the first post in our new Pelican blog! You can add any code or markdown cells to this Jupyter notebook, and they will be rendered on your blog.</p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+		<p class="content-emphasis"><a href="/first-notebook.html">
+			Read more... <i class="fa fa-arrow-circle-right fa-fw fa-lg"></i> 
+		</a></p>
+      </div>    </article>
+
+    <hr />
 
 <nav class="index-pager">
 
